SPA mit React fast vollständig
Die SPA wurde nun fast vollständig realisiert. Eine Änderung am Aufbau der Kurs-Anzeige muss noch realisiert werden.

Es wurden zwei Cors-Klassen erstellt, um einen sicheren Login zu gewährleisten.
Desweiteren wurde das Routing zwischen den Seiten implementiert.